--- a/src/partials/table-01.html
+++ b/src/partials/table-01.html
@@ -1,172 +1,115 @@
 <div
   class="rounded-sm border border-stroke bg-white px-5 pt-6 pb-2.5 shadow-default dark:border-strokedark dark:bg-boxdark sm:px-7.5 xl:pb-1"
 >
-  <h4 class="mb-6 text-xl font-bold text-black dark:text-white">
-    CLASS SCHEDULE
-  </h4>
+  <h4 class="mb-6 text-xl font-bold text-black dark:text-white">PAYMENTS</h4>
 
   <div class="flex flex-col">
     <div
-      class="grid grid-cols-3 rounded-sm bg-gray-2 dark:bg-meta-4 sm:grid-cols-5"
+      class="grid grid-cols-3 rounded-sm bg-gray-2 dark:bg-meta-4 sm:grid-cols-4"
     >
       <div class="p-2.5 xl:p-5">
-        <h5 class="text-sm font-medium uppercase xsm:text-base">Source</h5>
+        <h5 class="text-sm font-medium uppercase xsm:text-base">Description</h5>
       </div>
       <div class="p-2.5 text-center xl:p-5">
-        <h5 class="text-sm font-medium uppercase xsm:text-base">Visitors</h5>
+        <h5 class="text-sm font-medium uppercase xsm:text-base">Amount</h5>
       </div>
       <div class="p-2.5 text-center xl:p-5">
-        <h5 class="text-sm font-medium uppercase xsm:text-base">Revenues</h5>
+        <h5 class="text-sm font-medium uppercase xsm:text-base">Due Date</h5>
       </div>
       <div class="hidden p-2.5 text-center sm:block xl:p-5">
-        <h5 class="text-sm font-medium uppercase xsm:text-base">Sales</h5>
-      </div>
-      <div class="hidden p-2.5 text-center sm:block xl:p-5">
-        <h5 class="text-sm font-medium uppercase xsm:text-base">Conversion</h5>
+        <h5 class="text-sm font-medium uppercase xsm:text-base">Paid</h5>
       </div>
     </div>
 
     <div
-      class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-5"
+      class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-4"
     >
       <div class="flex items-center gap-3 p-2.5 xl:p-5">
-        <div class="flex-shrink-0">
-          <img src="./images/brand/brand-01.svg" alt="Brand" />
-        </div>
         <p class="hidden font-medium text-black dark:text-white sm:block">
-          Google
+          CSG Fee
         </p>
       </div>
 
       <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-black dark:text-white">3.5K</p>
+        <p class="font-medium text-black dark:text-white">PHP 150</p>
       </div>
 
       <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-meta-3">$5,768</p>
+        <p class="font-medium text-black">December 18, 2023</p>
       </div>
 
       <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-black dark:text-white">590</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-meta-5">4.8%</p>
+        <p class="font-medium text-black dark:text-white">No</p>
       </div>
     </div>
 
     <div
-      class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-5"
-    >
-      <div class="flex items-center gap-3 p-2.5 xl:p-5">
-        <div class="flex-shrink-0">
-          <img src="./images/brand/brand-02.svg" alt="Brand" />
-        </div>
-        <p class="hidden font-medium text-black dark:text-white sm:block">
-          Twitter
-        </p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-black dark:text-white">2.2K</p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-meta-3">$4,635</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-black dark:text-white">467</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-meta-5">4.3%</p>
-      </div>
+    class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-4"
+  >
+    <div class="flex items-center gap-3 p-2.5 xl:p-5">
+      <p class="hidden font-medium text-black dark:text-white sm:block">
+        Compedium
+      </p>
     </div>
 
-    <div
-      class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-5"
-    >
-      <div class="flex items-center gap-3 p-2.5 xl:p-5">
-        <div class="flex-shrink-0">
-          <img src="./images/brand/brand-03.svg" alt="Brand" />
-        </div>
-        <p class="hidden font-medium text-black dark:text-white sm:block">
-          Github
-        </p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-black dark:text-white">2.1K</p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-meta-3">$4,290</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-black dark:text-white">420</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-meta-5">3.7%</p>
-      </div>
+    <div class="flex items-center justify-center p-2.5 xl:p-5">
+      <p class="font-medium text-black dark:text-white">PHP 100</p>
     </div>
 
-    <div
-      class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-5"
-    >
-      <div class="flex items-center gap-3 p-2.5 xl:p-5">
-        <div class="flex-shrink-0">
-          <img src="./images/brand/brand-04.svg" alt="Brand" />
-        </div>
-        <p class="hidden font-medium text-black dark:text-white sm:block">
-          Vimeo
-        </p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-black dark:text-white">1.5K</p>
-      </div>
-
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-meta-3">$3,580</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-black dark:text-white">389</p>
-      </div>
-
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-meta-5">2.5%</p>
-      </div>
+    <div class="flex items-center justify-center p-2.5 xl:p-5">
+      <p class="font-medium text-black">December 20, 2023</p>
     </div>
 
-    <div class="grid grid-cols-3 sm:grid-cols-5">
-      <div class="flex items-center gap-3 p-2.5 xl:p-5">
-        <div class="flex-shrink-0">
-          <img src="./images/brand/brand-05.svg" alt="Brand" />
-        </div>
-        <p class="hidden font-medium text-black dark:text-white sm:block">
-          Facebook
-        </p>
-      </div>
+    <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
+      <p class="font-medium text-black dark:text-white">Yes</p>
+    </div>
+  </div>
 
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-black dark:text-white">1.2K</p>
-      </div>
+  <div
+  class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-4"
+>
+  <div class="flex items-center gap-3 p-2.5 xl:p-5">
+    <p class="hidden font-medium text-black dark:text-white sm:block">
+      Org Shirt
+    </p>
+  </div>
 
-      <div class="flex items-center justify-center p-2.5 xl:p-5">
-        <p class="font-medium text-meta-3">$2,740</p>
-      </div>
+  <div class="flex items-center justify-center p-2.5 xl:p-5">
+    <p class="font-medium text-black dark:text-white">PHP 300</p>
+  </div>
 
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-black dark:text-white">230</p>
-      </div>
+  <div class="flex items-center justify-center p-2.5 xl:p-5">
+    <p class="font-medium text-black">January 24, 2024</p>
+  </div>
 
-      <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
-        <p class="font-medium text-meta-5">1.9%</p>
-      </div>
+  <div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
+    <p class="font-medium text-black dark:text-white">Yes</p>
+  </div>
+</div>
+
+<div
+class="grid grid-cols-3 border-b border-stroke dark:border-strokedark sm:grid-cols-4"
+>
+<div class="flex items-center gap-3 p-2.5 xl:p-5">
+  <p class="hidden font-medium text-black dark:text-white sm:block">
+    College Shirt
+  </p>
+</div>
+
+<div class="flex items-center justify-center p-2.5 xl:p-5">
+  <p class="font-medium text-black dark:text-white">PHP 450</p>
+</div>
+
+<div class="flex items-center justify-center p-2.5 xl:p-5">
+  <p class="font-medium text-black">March 27, 2024</p>
+</div>
+
+<div class="hidden items-center justify-center p-2.5 sm:flex xl:p-5">
+  <p class="font-medium text-black dark:text-white">Yes</p>
+</div>
+</div>
+
+   
     </div>
   </div>
 </div>
